[package]
name = "gryf"
version = "0.1.0"
authors = ["Petr Nevyhoštěný"]
edition = "2021"

[dependencies]
fixedbitset = "0.4"
bitvec = "0.22"
rustc-hash = "1"

macros = { path = "macros" }

arbitrary = { version = "1.0", optional = true, default-features = false }
proptest = { version = "1.0", optional = true, default-features = false }

[features]
all = ["arbitrary", "proptest"]
