[package]
name = "gryf"
version = "0.1.0"
authors = ["Petr Nevyhoštěný"]
edition = "2021"

[dependencies]
fixedbitset = "0.4"
bitvec = "1"
rustc-hash = "1"

macros = { path = "macros" }

arbitrary = { version = "1.0", features = ["derive"], optional = true }
proptest = { version = "1.0", optional = true }
# https://github.com/AltSysrq/proptest/pull/260
proptest-derive = { git = "https://github.com/pnevyk/proptest", branch = "fix-derive-type-use-tracking-order", optional = true }

[dev-dependencies]
# Remove once https://github.com/rust-lang/rust/issues/82775 is stabilized
assert_matches = "1.5.0"

[features]
default = ["arbitrary", "proptest"]
arbitrary = ["dep:arbitrary"]
proptest = ["dep:proptest", "dep:proptest-derive"]
