[package]
name = "gryf"
version = "0.1.0"
authors = ["Petr Nevyhoštěný"]
edition = "2021"

[dependencies]
fixedbitset = "0.4.2"
bitvec = "1.0.1"
rustc-hash = "1.1.0"

macros = { path = "macros" }

arbitrary = { version = "1.2.3", features = ["derive"], optional = true }
proptest = { version = "1.1.0", optional = true }
thiserror = "1.0.38"

[dev-dependencies]
# Remove once https://github.com/rust-lang/rust/issues/82775 is stabilized
assert_matches = "1.5.0"
fastrand = "1.9.0"

[features]
default = ["arbitrary", "proptest"]
arbitrary = ["dep:arbitrary"]
proptest = ["dep:proptest"]
