[package]
name = "gryf-derive"
version = "0.2.0"
edition = "2024"
license = "MIT OR Unlicense"
description = "Derive macros for gryf, a graph data structure library with focus on convenience, versatility, correctness and performance."
homepage = "https://github.com/pnevyk/gryf"
documentation = "https://docs.rs/gryf"
repository = "https://github.com/pnevyk/gryf"
readme = "./README.md"
keywords = ["graph", "algorithms", "data-structures"]
categories = ["algorithms", "data-structures"]

[dependencies]
proc-macro2 = "1.0.0"
quote = "1.0.0"
syn = { version = "2.0.0", features = ["full"] }

[lib]
proc-macro = true
